# mcprelay

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  config.test.yaml  config.yaml  docker-compose.yml  prometheus.yml  pyproject.toml  quickstart.sh  test_enterprise_integration.py  test_license.py  test_license_agnostic.py  test_signed_license.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
deploy/gcp/: cloudbuild.yaml  cloudrun.yaml  config.production.yaml  deploy.sh
docs/: CNAME  index.html
mcprelay/: __init__.py  admin_mcp.py  auth.py  cli.py  config.py  license_community.py  load_balancer.py  mcp.py  rate_limit.py  server.py  web_ui.py
mcprelay/plugins/: __init__.py  simple.py
mcprelay/templates/: base.html  config.html  dashboard.html  logs.html  metrics.html  servers.html
tests/: __init__.py  test_auth.py  test_auth_admin.py  test_config.py  test_mcp_path_traversal.py
